# ChangeLog for sys-apps/diffutils
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/diffutils/ChangeLog,v 1.49 2006/03/30 14:41:18 flameeyes Exp $

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  diffutils-2.8.7-r1.ebuild:
  Add ~x86-fbsd keyword.

  29 Jun 2005; Joshua Kinard <kumba@gentoo.org> diffutils-2.8.7-r1.ebuild:
  Marked stable on mips.

  22 May 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  diffutils-2.8.7-r1.ebuild:
  Stable on ppc.

  26 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  diffutils-2.8.7-r1.ebuild:
  Stable on alpha.

  25 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  diffutils-2.8.7-r1.ebuild:
  Stable on sparc

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> diffutils-2.8.7-r1.ebuild:
  Stable on ppc64

  17 Feb 2005; Kito <kito@gentoo.org> diffutils-2.8.7-r1.ebuild:
  ~ppc-macos keyword

  23 Jan 2005; Bryan Østergaard <kloeri@gentoo.org> diffutils-2.8.7.ebuild:
  Stable on alpha.

  18 Jan 2005; Joshua Kinard <kumba@gentoo.org> diffutils-2.8.7.ebuild:
  Marked stable on mips.

*diffutils-2.8.7-r1 (03 Jan 2005)

  03 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  +diffutils-2.8.7-r1.ebuild:
  Add patch to fix i18n support #71689 by S.Caglar Onur.

  17 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org> diffutils-2.8.7.ebuild:
  Stable on sparc

  09 Dec 2004; Mike Frysinger <vapier@gentoo.org> diffutils-2.8.4-r4.ebuild,
  diffutils-2.8.7.ebuild:
  Make sure we dont try to regenerate the manpages #55479.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  diffutils-2.8.4-r4.ebuild:
  Masked diffutils-2.8.4-r4.ebuild stable for ppc

  05 Aug 2004; <solar@gentoo.org> diffutils-2.8.7.ebuild:
  This build defines --build= to the CHOST which breaks when your trying to
  cross compile and CBUILD is already defined

  25 Jun 2004; Aron Griffis <agriffis@gentoo.org> diffutils-2.8.4-r3.ebuild:
  QA - fix use invocation
