@@ -16,19 +16,18 @@ RMD160 fe8c7f59fcbbaf2b6df328ef4c764ecae8a0a3a3 files/diffutils-2.8.4-tabsize-du
 SHA256 7404734bdcbc9c9741cb9067e0949c8403d23a2750cfbe2034bb849fe0d209a1 files/diffutils-2.8.4-tabsize-dumps-core.diff 804
 DIST diffutils-2.8.7-i18n.patch.bz2 4388 RMD160 c1d8640f86e2362551d1e94893f7f0079839fa75 SHA1 3ad149e0ff8725ffb82e8f5613dcfdf58ef606f8 SHA256 a6a8f47d75ea9e61a0b9dba45f4a85bf1d54572c191bb7ad9e0cb7e8edd867c0
 DIST diffutils-2.8.7.tar.gz 1057977 RMD160 389518f9008e56a283884809d7abac4b3cb8edce SHA1 b05cfdd651137d46d97872dd646db0dd92077f0d SHA256 53d9c10830ac322c00dfcccf60d961014e767da86d2c802ccc5cbad7e7aea07c
-EBUILD diffutils-2.8.7-r1.ebuild 1677 RMD160 ee9b1e8431dabc8809ce8e35aefa3bd6b29b10e2 SHA1 8cc86d1524a5f647fc9a9fb7ae7efc506d7b90e8 SHA256 a19253c4302690062f12439979c047bc1d3168c625c53027970bba1364e041e3
-MD5 39919c8f1771dddfe48b5c293feecdfd diffutils-2.8.7-r1.ebuild 1677
-RMD160 ee9b1e8431dabc8809ce8e35aefa3bd6b29b10e2 diffutils-2.8.7-r1.ebuild 1677
-SHA256 a19253c4302690062f12439979c047bc1d3168c625c53027970bba1364e041e3 diffutils-2.8.7-r1.ebuild 1677
-MISC ChangeLog 6285 RMD160 a00f460fbc6be399a04c583ed4c61f3d04e7348b SHA1 f057b0f43371802d64134ed28d11ab3fa8d11452 SHA256 7a7c98728dcc401febb497034bc7bb915e52bc2dbacc057cf7f5a0b1c55816b1
-MD5 8bb1940bd415ffaeee878b35fe7dfddb ChangeLog 6285
-RMD160 a00f460fbc6be399a04c583ed4c61f3d04e7348b ChangeLog 6285
-SHA256 7a7c98728dcc401febb497034bc7bb915e52bc2dbacc057cf7f5a0b1c55816b1 ChangeLog 6285
+EBUILD diffutils-2.8.7-r1.ebuild 1676 RMD160 1f1c3c283eb842ef7f446fe5f01fe4aaaabef426 SHA1 342140a0a7017a89f949aa5dea3a47d3e1a83fb3 SHA256 1829f29b952e985229d49a46b7b4c202b9d7299227b3d219c599b3eda02e47d2
+MD5 eb3f265ba10b3279ed41cc80f8de883b diffutils-2.8.7-r1.ebuild 1676
+RMD160 1f1c3c283eb842ef7f446fe5f01fe4aaaabef426 diffutils-2.8.7-r1.ebuild 1676
+SHA256 1829f29b952e985229d49a46b7b4c202b9d7299227b3d219c599b3eda02e47d2 diffutils-2.8.7-r1.ebuild 1676
+MISC ChangeLog 6390 RMD160 48b8d3de6fa95e9a0ea850c892805e47fce1888f SHA1 494809a6fa345e368ca3134b24e163f863abacd1 SHA256 254aaf797163aea6165777016b305a8bb5a067036ca5b9acc64329a5e3abd7c7
+MD5 c91199d42060434c24660c29a5314a2d ChangeLog 6390
+RMD160 48b8d3de6fa95e9a0ea850c892805e47fce1888f ChangeLog 6390
+SHA256 254aaf797163aea6165777016b305a8bb5a067036ca5b9acc64329a5e3abd7c7 ChangeLog 6390
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-size 515 files/digest-diffutils-2.8.7-r1 515
+MD5 288b8c2ac2cedc6e8c20fec74259d9de files/digest-diffutils-2.8.7-r1 515
 RMD160 c23bbcce0cd3899a92c476879a48ac0449efa587 files/digest-diffutils-2.8.7-r1 515
 SHA256 90107c7610e248a4591e80bb8a7c09c55f1551a0cbfe13e5c7b99d54d083df7b files/digest-diffutils-2.8.7-r1 515
-MD5 288b8c2ac2cedc6e8c20fec74259d9de files/digest-diffutils-2.8.7-r1 515
