@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/diffutils
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/diffutils/ChangeLog,v 1.49 2006/03/30 14:41:18 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/diffutils/ChangeLog,v 1.50 2006/10/18 11:33:29 uberlord Exp $
+
+  18 Oct 2006; Roy Marples <uberlord@gentoo.org> diffutils-2.8.7-r1.ebuild:
+  Added ~sparc-fbsd keyword.
 
   30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
   diffutils-2.8.7-r1.ebuild:
